--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <Header>
         <H1>GET YOUR WEATHER HERE ON THE WEATHERAPP!</H1>
-        <form>
+        <div class="search">
             <label for="searchbox"></label>  
             <input type ="text" id="searchbox" name="searchbox" placeholder="Enter City">
             <br>  
-            <button type="submit" class="searchboxSubmit" >Submit</button>
-        </form>
+            <button type="submit">Submit</button>
+        </div>
     </Header>
   <script src="./js/script.js"></script>
 </body>
