--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
 <body>
     <Header>
         <H1>GET YOUR WEATHER HERE ON THE WEATHERAPP!</H1>
-        <div class="search">
+        <div >
             <label for="searchbox"></label>  
             <input type ="text" id="searchbox" name="searchbox" placeholder="Enter City">
             <br>  
-            <button type="submit">Submit</button>
+            <button type="submit" class="search">Search</button>
+        </div>
+        <div>
+            <h3>Current Day</h3>
+            <p class="currentcity"></p>
+            <p class="windspeed"></p>
         </div>
     </Header>
   <script src="./js/script.js"></script>
