--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Weatherapp</title>
 </head>
 <body>
@@ -17,11 +17,21 @@
             <button type="submit" class="search">Search</button>
         </div>
         <div>
-            <h3>Current Day</h3>
+            <h3 class="cityName"></h3>
             <p class="currentcity"></p>
             <p class="windspeed"></p>
         </div>
     </Header>
+    <span><h2>5 DAY FORCAST</h2></span>
+    <Main class="card-container">
+        <div class="card">
+            <div class="card-body">
+                <h3>Monday</h3>
+                <p>Hello</p>
+            </div>
+        </div>
+
+    </Main>
   <script src="./js/script.js"></script>
 </body>
 </html>
