finish five day forcast

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
             <br>  
             <button type="submit" class="search">Search</button>
         </div>
-        <div>
+        <container>
             <h3 class="cityName"></h3>
-            <p class="currentcity"></p>
+            <p class="currentTemp"></p>
+            <p class="currentHumidity"></p>
             <p class="windspeed"></p>
-        </div>
+        </container>
     </Header>
     <span><h2>5 DAY FORCAST</h2></span>
     <Main class="card-container">
